[package]
name = "kodik-api"
version = "0.2.0"
edition = "2021"
description = "An unofficial async Rust library that allows you to interact with the Kodik API"
authors = ["Negezor <negezor@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/negezor/kodik-api-rust"
keywords = ["kodik", "api", "sdk", "wrapper", "async"]
categories = ["api-bindings"]

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
comma_serde_urlencoded = { version = "0.8" }
thiserror = { version = "1.0" }
url = { version = "2.5" }
serde_json = { version = "1.0" }
futures = { version = "0.3", default-features = false, features = ["std"] }
async-fn-stream = { version = "0.2" }

[dev-dependencies]
tokio = { version = "1.36", features = [
    "macros",
    "rt-multi-thread"
] }
